# ABNCGReworked

./: CMakeLists.txt  README.md  about.md  mod.json
.github/workflows/: multi-platform.yml
assets/: spr_player_normal.rar
assets/files/: basic.vsh  menu.fsh  menuBG.fsh  menuListTitle.fsh
include/: SahderLayer.hpp  _main.hpp  fs.hpp
src/: main.cpp
